fix fan boxes having different sizes on smaller screens

--- a/static/style.css
+++ b/static/style.css
@@ -527,13 +527,13 @@ table {
     background-color: rgb(31, 31, 31);
     border-radius: 12px;
     position: relative;
-    width: 100%;
-    height: 100%;
     display: flex;
     gap: 15px;
     font-size: large;
     scrollbar-width: thin;
     align-items: center;
+    flex: 1 1 0px;
+    min-width: 0px;
 }
 .fan {
     position: relative;
@@ -836,7 +836,7 @@ table {
     position: relative;
     width: 20px;
     height: 100%;
-    left: 10px;
+    left: 4%;
     gap: 5px;
     display: flex;
     flex-direction: column;
